--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -229,7 +229,7 @@
     <section id="droits">
       <h2>10. Vos droits</h2>
       <p>Vous disposez des droits suivants&nbsp;: <strong>accès</strong>, <strong>rectification</strong> ou <strong>suppression</strong>, <strong>limitation</strong> du traitement, <strong>portabilité</strong>, <strong>opposition</strong>.</p>
-      <p>Pour exercer vos droits, contactez-nous à&nbsp;: <a href="mailto:privacy@dineroo.app">privacy@dineroo.app</a> ou via l’onglet <em>Support / Confidentialité</em> dans l’application.</p>
+      <p>Pour exercer vos droits, contactez-nous à&nbsp;: <a href="mailto:privacy@dineroo.africa">privacy@dineroo.africa</a> ou via l’onglet <em>Support / Confidentialité</em> dans l’application.</p>
     </section>
 
     <section id="suppression">
@@ -247,8 +247,8 @@
       <address>
         <strong>Dineroo SARL</strong><br />
         Conakry, République de Guinée<br />
-        📧 <a href="mailto:privacy@dineroo.app">privacy@dineroo.app</a><br />
-        🌐 <a href="https://dineroo.app" rel="noopener" target="_blank">https://dineroo.app</a>
+        📧 <a href="mailto:privacy@dineroo.africa">privacy@dineroo.africa</a><br />
+        🌐 <a href="https://dineroo.africa" rel="noopener" target="_blank">https://dineroo.africa</a>
       </address>
     </section>
 
